--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,11 @@
         <Button android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tool01"
-                android:id="@+id/tool01"/>
+                android:id="@+id/tool_01"/>
         <Button android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tool02"
-                android:id="@+id/tool02"/>
+                android:id="@+id/tool_02"/>
     </TableRow>
     <TableRow
             android:layout_marginLeft="10dp"
@@ -27,11 +27,11 @@
         <Button android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tool03"
-                android:id="@+id/tool03"/>
+                android:id="@+id/tool_03"/>
         <Button android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tool04"
-                android:id="@+id/tool04"/>
+                android:id="@+id/tool_04"/>
     </TableRow>
 
 </TableLayout>
