--- a/app/src/main/res/layout/activity_memo.xml
+++ b/app/src/main/res/layout/activity_memo.xml
@@ -15,7 +15,8 @@
             android:dividerHeight="1dp"
             android:fadingEdge="none"
             android:listSelector="#00000000"
-            android:scrollbars="none"/>
+            android:scrollbars="none"
+            android:layout_margin="10dp"/>
     <ImageView
             android:id="@+id/add_memo"
             android:layout_width="100dp"
