--- a/app/src/main/res/layout/memo_item_layout.xml
+++ b/app/src/main/res/layout/memo_item_layout.xml
@@ -10,6 +10,7 @@
             android:layout_height="wrap_content"
             android:maxLines="2"
             android:ellipsize="end"
+            android:textSize="20dp"
             android:lineSpacingExtra="3dp"
             android:paddingTop="10dp"
             android:textColor="@android:color/black"/>
