--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
     <TableRow
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp">
+            android:layout_marginRight="10dp"
+            android:gravity="center">
         <Button android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tool01"
@@ -23,7 +24,8 @@
     </TableRow>
     <TableRow
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
+            android:layout_marginRight="10dp"
+            android:gravity="center">
         <Button android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tool03"
