--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -1,10 +1,287 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".CalculatorActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:gravity="center_horizontal"
+              android:paddingBottom="10dp"
+              android:paddingLeft="10dp"
+              android:paddingRight="10dp"
+              android:paddingTop="10dp"
+              tools:context=".CalculatorActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+            android:id="@+id/ed_calculator_input"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@drawable/white"
+            android:textSize="20sp"
+            android:gravity="right|bottom"/>
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:id="@+id/tv_calculator_result"/>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="10dip"
+            android:orientation="vertical">
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+            <Button
+                    android:id="@+id/btn_calculator_clear"
+                    android:gravity="right|bottom"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:textSize="20sp"
+                    android:background="@drawable/whitetogray"
+                    android:text="C"/>
+            <Button
+                    android:id="@+id/btn_calculator_del"
+                    android:gravity="right|bottom"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="20sp"
+                    android:background="@drawable/whitetogray"
+                    android:text="Del"/>
+            <Button
+                    android:id="@+id/btn_calculator_plus"
+                    android:gravity="right|bottom"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="20sp"
+                    android:background="@drawable/whitetogray"
+                    android:text="＋"/>
+            <Button
+                    android:id="@+id/btn_calculator_multiply"
+                    android:gravity="right|bottom"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="20sp"
+                    android:background="@drawable/whitetogray"
+                    android:text="×"/>
+
+        </LinearLayout>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+            <Button
+                    android:id="@+id/btn_calculator_7"
+                    android:gravity="right|bottom"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:textSize="20sp"
+                    android:background="@drawable/whitetogray"
+                    android:text="7"/>
+            <Button
+                    android:id="@+id/btn_calculator_8"
+                    android:gravity="right|bottom"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="20sp"
+                    android:background="@drawable/whitetogray"
+                    android:text="8"/>
+            <Button
+                    android:id="@+id/btn_calculator_9"
+                    android:gravity="right|bottom"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="20sp"
+                    android:background="@drawable/whitetogray"
+                    android:text="9"/>
+            <Button
+                    android:id="@+id/btn_calculator_subtract"
+                    android:gravity="right|bottom"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="20sp"
+                    android:background="@drawable/whitetogray"
+                    android:text="－"/>
+        </LinearLayout>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+            <Button
+                    android:id="@+id/btn_calculator_4"
+                    android:gravity="right|bottom"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:textSize="20sp"
+                    android:background="@drawable/whitetogray"
+                    android:text="4"/>
+            <Button
+                    android:id="@+id/btn_calculator_5"
+                    android:gravity="right|bottom"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="20sp"
+                    android:background="@drawable/whitetogray"
+                    android:text="5"/>
+            <Button
+                    android:id="@+id/btn_calculator_6"
+                    android:gravity="right|bottom"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="20sp"
+                    android:background="@drawable/whitetogray"
+                    android:text="6"/>
+            <Button
+                    android:id="@+id/btn_calculator_divide"
+                    android:gravity="right|bottom"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="20sp"
+                    android:background="@drawable/whitetogray"
+                    android:text="÷"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical">
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:orientation="horizontal">
+                    <Button
+                            android:id="@+id/btn_calculator_1"
+                            android:gravity="right|bottom"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:layout_alignLeft="@+id/button_4"
+                            android:paddingTop="10dp"
+                            android:paddingRight="10dp"
+                            android:textSize="20sp"
+                            android:background="@drawable/whitetogray"
+                            android:text="1"/>
+                    <Button
+                            android:id="@+id/btn_calculator_2"
+                            android:gravity="right|bottom"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:layout_alignLeft="@+id/button_5"
+                            android:paddingTop="10dp"
+                            android:paddingRight="10dp"
+                            android:layout_marginLeft="10dp"
+                            android:textSize="20sp"
+                            android:background="@drawable/whitetogray"
+                            android:text="2"/>
+                    <Button
+                            android:id="@+id/btn_calculator_3"
+                            android:gravity="right|bottom"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:layout_alignLeft="@+id/button_6"
+                            android:paddingTop="10dp"
+                            android:paddingRight="10dp"
+                            android:layout_marginLeft="10dp"
+                            android:textSize="20sp"
+                            android:background="@drawable/whitetogray"
+                            android:text="3"/>
+
+                </LinearLayout>
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal">
+                    <Button
+                            android:id="@+id/btn_calculator_0"
+                            android:gravity="right|bottom"
+                            android:layout_width="130dp"
+                            android:layout_height="60dp"
+                            android:paddingTop="10dp"
+                            android:paddingRight="10dp"
+                            android:textSize="20sp"
+                            android:background="@drawable/whitetogray"
+                            android:text="0"/>
+                    <Button
+                            android:id="@+id/btn_calculator_point"
+                            android:gravity="right|bottom"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:paddingTop="10dp"
+                            android:paddingRight="10dp"
+                            android:layout_marginLeft="10dp"
+                            android:textSize="20sp"
+                            android:background="@drawable/whitetogray"
+                            android:text="."/>
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+            <Button
+                    android:id="@+id/btn_calculator_equal"
+                    android:gravity="right|bottom"
+                    android:layout_width="60dp"
+                    android:layout_height="130dp"
+                    android:layout_marginLeft="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:textSize="20sp"
+                    android:background="@drawable/greentodarkgreen"
+                    android:text="="/>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
