--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -15,7 +15,7 @@
             android:layout_height="100dp"
             android:background="@drawable/white"
             android:gravity="right|bottom"
-            android:textSize="20sp" />
+            android:textSize="20sp"/>
 
     <TextView
             android:id="@+id/tv_calculator_result"
@@ -25,18 +25,23 @@
             android:gravity="center"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="60dp" />
+            android:layout_below="@id/ed_calculator_input"
+            android:layout_height="40dp"/>
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:gravity="center_horizontal"
-            android:orientation="vertical">
+            android:layout_alignParentBottom="true"
+            android:layout_below="@id/tv_calculator_result"
+            android:orientation="vertical"
+            android:layout_marginBottom="10dp">
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="65dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
@@ -48,7 +53,7 @@
                     android:background="@drawable/whitetogray"
                     android:gravity="center"
                     android:text="C"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"/>
 
             <Button
                     android:id="@+id/btn_calculator_del"
@@ -58,7 +63,7 @@
                     android:background="@drawable/whitetogray"
                     android:gravity="center"
                     android:text="Del"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"/>
 
             <Button
                     android:id="@+id/btn_calculator_plus"
@@ -68,7 +73,7 @@
                     android:background="@drawable/whitetogray"
                     android:gravity="center"
                     android:text="＋"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"/>
 
             <Button
                     android:id="@+id/btn_calculator_multiply"
@@ -78,13 +83,14 @@
                     android:background="@drawable/whitetogray"
                     android:gravity="center"
                     android:text="×"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"/>
 
         </LinearLayout>
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="65dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:layout_marginTop="10dp"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
@@ -97,8 +103,7 @@
                     android:gravity="center"
                     android:background="@drawable/whitetogray"
                     android:text="7"
-                    android:textSize="20sp" />
-
+                    android:textSize="20sp"/>
             <Button
                     android:id="@+id/btn_calculator_8"
                     android:layout_width="0dp"
@@ -107,7 +112,7 @@
                     android:gravity="center"
                     android:background="@drawable/whitetogray"
                     android:text="8"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"/>
 
             <Button
                     android:id="@+id/btn_calculator_9"
@@ -117,7 +122,7 @@
                     android:gravity="center"
                     android:background="@drawable/whitetogray"
                     android:text="9"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"/>
 
             <Button
                     android:id="@+id/btn_calculator_subtract"
@@ -127,12 +132,13 @@
                     android:gravity="center"
                     android:background="@drawable/whitetogray"
                     android:text="－"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"/>
         </LinearLayout>
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="65dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:layout_marginTop="10dp"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
@@ -145,7 +151,7 @@
                     android:gravity="center"
                     android:background="@drawable/whitetogray"
                     android:text="4"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"/>
 
             <Button
                     android:id="@+id/btn_calculator_5"
@@ -155,7 +161,7 @@
                     android:gravity="center"
                     android:background="@drawable/whitetogray"
                     android:text="5"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"/>
 
             <Button
                     android:id="@+id/btn_calculator_6"
@@ -165,7 +171,7 @@
                     android:gravity="center"
                     android:background="@drawable/whitetogray"
                     android:text="6"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"/>
 
             <Button
                     android:id="@+id/btn_calculator_divide"
@@ -175,25 +181,27 @@
                     android:gravity="center"
                     android:background="@drawable/whitetogray"
                     android:text="÷"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"/>
 
         </LinearLayout>
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="2"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
             <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_weight="4"
-                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:layout_height="match_parent"
                     android:orientation="vertical">
 
                 <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="65dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
                         android:gravity="center_horizontal"
                         android:orientation="horizontal">
 
@@ -205,7 +213,7 @@
                             android:gravity="center"
                             android:background="@drawable/whitetogray"
                             android:text="1"
-                            android:textSize="20sp" />
+                            android:textSize="20sp"/>
 
                     <Button
                             android:id="@+id/btn_calculator_2"
@@ -215,7 +223,7 @@
                             android:gravity="center"
                             android:background="@drawable/whitetogray"
                             android:text="2"
-                            android:textSize="20sp" />
+                            android:textSize="20sp"/>
 
                     <Button
                             android:id="@+id/btn_calculator_3"
@@ -226,13 +234,14 @@
                             android:background="@drawable/whitetogray"
 
                             android:text="3"
-                            android:textSize="20sp" />
+                            android:textSize="20sp"/>
 
                 </LinearLayout>
 
                 <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="65dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
                         android:layout_marginTop="10dp"
                         android:gravity="center_horizontal"
                         android:orientation="horizontal">
@@ -240,12 +249,12 @@
                     <Button
                             android:id="@+id/btn_calculator_0"
                             android:layout_width="0dp"
-                            android:layout_weight="1"
+                            android:layout_weight="2"
                             android:layout_height="match_parent"
                             android:background="@drawable/whitetogray"
                             android:gravity="center"
                             android:text="0"
-                            android:textSize="20sp" />
+                            android:textSize="20sp"/>
 
                     <Button
                             android:id="@+id/btn_calculator_point"
@@ -256,7 +265,7 @@
                             android:gravity="center"
                             android:text="."
                             android:textStyle="bold"
-                            android:textSize="20sp" />
+                            android:textSize="20sp"/>
 
                 </LinearLayout>
 
@@ -272,11 +281,11 @@
                     android:gravity="center"
                     android:text="="
                     android:textColor="#fff"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"/>
 
 
         </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
