计算器界面按钮取消圆角，调整间隔，增加边框线

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorGreenDark">#008785</color>
     <color name="colorPrimaryDark">#009f9d</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="white">#ffffffff</color>
+    <color name="borderColor">#A5A5A5</color>
 </resources>
