--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -3,17 +3,13 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center_horizontal"
-              android:orientation="vertical"
-              android:paddingLeft="10dp"
-              android:paddingTop="15dp"
-              android:paddingRight="10dp"
-              android:paddingBottom="10dp">
+              android:orientation="vertical">
 
     <EditText
             android:id="@+id/ed_calculator_input"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:background="@drawable/white"
+            android:background="@color/white"
             android:gravity="right|bottom"
             android:textSize="20sp"/>
 
@@ -35,8 +31,7 @@
             android:gravity="center_horizontal"
             android:layout_alignParentBottom="true"
             android:layout_below="@id/tv_calculator_result"
-            android:orientation="vertical"
-            android:layout_marginBottom="10dp">
+            android:orientation="vertical">
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -91,7 +86,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:layout_marginTop="10dp"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
@@ -139,7 +133,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:layout_marginTop="10dp"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
@@ -189,7 +182,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="2"
-                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
             <LinearLayout
@@ -242,7 +234,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
-                        android:layout_marginTop="10dp"
                         android:gravity="center_horizontal"
                         android:orientation="horizontal">
 
