--- a/app/src/main/res/layout/activity_memo_record.xml
+++ b/app/src/main/res/layout/activity_memo_record.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MemoRecordActivity"
-        android:background="#fefefe">
+        android:background="@color/white">
     <TextView
             android:id="@+id/tv_time"
             android:layout_width="match_parent"
@@ -24,7 +24,7 @@
             android:hint="请输入要添加的内容"
             android:paddingLeft="5dp"
             android:layout_margin="5dp"
-            android:background="#fefefe"
+            android:background="@color/white"
             android:layout_below="@id/tv_time"/>
     <ImageView
             android:id="@+id/save_memo"
